# SEEGarchtypes-EEGmicrostates

./: .gitignore  AGENTS.md  README.md  pyproject.toml
datas/: data_01_seeg  info_patient.xlsx  ~$info_patient.xlsx
docs/: methods.md  报告迁移说明.md  数据处理流程文档.md  科研路线与论文大纲_改进.md  科研路线与论文大纲_改进2.md  科研路线与论文大纲_改进3.md  科研路线与论文式大纲.md
manuscripts/: base.docx  ~$base.docx
scripts/: 01_main_figures.Rmd  02_supplementary_figures.Rmd  03_patient_archetype_yeo17_ggseg_maps.Rmd  03_patient_archetype_yeo17_ggseg_maps.html  04_patient_archetype_parameter_statistics.Rmd  04_patient_archetype_parameter_statistics.html  05_seeg_archetype_eeg_microstate_relationship.Rmd  05_seeg_archetype_eeg_microstate_relationship.html  06_eeg_microstate_overview.Rmd  06_eeg_microstate_overview.html  07_seizure_stage_microstate_archetype_trajectory.Rmd  08_ide_a_vs_seizure_stage_comparison.Rmd  09_maintext_validation_figures.Rmd  09_maintext_validation_figures.html  10_supplementary_figure_statistics_tables.Rmd  10_supplementary_figure_statistics_tables.html  README.md  _common.R  export_eeg_microstate_overview.py  export_maintext_validation_inputs.py  export_patient_archetype_loading_table.py  export_seeg_peak_segment.py
tests/: test_band_connectivity.py  test_cli.py  test_config_and_workflows.py  test_direct_state_coupling.py  test_eeg_microstate_artifacts.py  test_eeg_pipeline.py  test_exploratory_coupling.py  test_field_state_coupling.py  test_gfp_global_coupling.py  test_index_and_segments.py  test_main_four_state_stats.py  test_paper_export_r_workflow.py  test_scripts_peak_segment.py  (+4 more)
(+220 files in other folders)
